# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_BUILD.md  TECHNICAL_COMPARATIVE_STUDY.md  build.sh  conanfile.txt  conanfile_server.txt  db.sql  mkdocs.yml  sitemap.xml
.github/workflows/: build-release.yml  clang-format.yml  push-to-mirror.yml
GameEngine/ECS/: Component.hpp  ComponentManager.hpp  ECSManager.hpp  EntityManager.cpp  EntityManager.hpp  SystemManager.hpp
Server/: CMakeLists.txt  server.properties
Server/src/: Help.cpp  Help.hpp  Macros.hpp  Parser.cpp  Parser.hpp  Server.cpp  Server.hpp  main.cpp
Server/src/Errors/: ParamsError.hpp
Server/src/Packets/: Packet.hpp  PacketFactory.hpp  PacketHandler.hpp
Server/tests/: test_server.cpp
admin/: database.py  main.py  requirements.txt
admin/textuals/: __init__.py  bans_management.py  players_management.py  scores_management.py
client/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Challenge.hpp  Client.cpp  Client.hpp  EmbedAssets.cpp  EmbeddedAssets.cpp  EmbeddedAssets.hpp  ProjectileSpriteConfig.hpp  RenderManager.cpp  RenderManager.hpp  WindowsFix.hpp  client.properties  main.cpp
client/packets/: APacket.hpp  IPacket.hpp  PacketFactory.cpp  PacketFactory.hpp  PacketHandler.cpp  PacketHandler.hpp
client/resources/: CMakeLists.txt
client/src/: main.cpp
core/: Parser.cpp  Parser.hpp
core/crypto/: Crypto.hpp
core/errors/: ParamsError.hpp
core/network/: BaseNetworkManager.hpp  ClientNetworkManager.cpp  ClientNetworkManager.hpp  Packet.hpp  PacketBuilder.hpp  PacketCompressor.hpp  PacketLossMonitor.hpp  PacketSender.hpp  PacketSerialize.hpp  PacketUtils.hpp  Serializer.hpp  ServerNetworkManager.cpp  ServerNetworkManager.hpp
core/utils/: Crypto.hpp  Macro.hpp  RandomNameGenerator.hpp  RaylibUtils.hpp
docs/: CNAME  how_to.md  index.md  server_protocol.md
docs/doxygen/html/: _asset_manager_8hpp.html  _asset_manager_8hpp__dep__incl.dot  _asset_manager_8hpp__incl.dot  _asset_manager_8hpp_source.html  _background_system_8hpp.html  _background_system_8hpp.js  (+400 more)
docs/wiki/: AssetManagement.md  ContributionGuidelines.md  GameEngineECS.md  GettingStarted.md  Home.md  Networking.md  ProjectStructure.md
doxygen/html/: _asset_management_8md.html  _background_tag_component_8hpp_source.html  _boundary_system_8hpp__incl.dot  _client_network_manager_8cpp.html  _client_network_manager_8hpp.html  _client_network_manager_8hpp__dep__incl.dot  _client_network_manager_8hpp__incl.dot  _collider_component_8hpp__dep__incl.dot  _collision_system_8cpp__incl.dot  _collision_system_8hpp__incl.dot  _component_8hpp.js  _component_manager_8hpp.html  _component_manager_8hpp__dep__incl.dot  _e_c_s_manager_8hpp.js  _e_c_s_manager_8hpp_source.html  _embedded_assets_8hpp.html  _embedded_assets_8hpp__dep__incl.dot  _enemy_8cpp__incl.dot  _enemy_8hpp_source.html  _enemy_component_8hpp.js  _enemy_component_8hpp__incl.dot  _enemy_system_8hpp_source.html  _events_8hpp__dep__incl.dot  _game_8cpp__incl.dot  _game_8hpp.js  _game_8hpp__dep__incl.dot  _getting_started_8md.html  _help_8cpp.js  _help_8hpp__dep__incl.dot  _input_system_8cpp.html  _input_system_8cpp__incl.dot  _input_system_8hpp__dep__incl.dot  _movement_system_8cpp.html  _networking_8md.html  _packet_builder_8hpp.js  _packet_builder_8hpp__dep__incl.dot  _packet_sender_8hpp__dep__incl.dot  _player_component_8hpp__incl.dot  _player_component_8hpp_source.html  _player_tag_component_8hpp_source.html  (+165 more)
doxygen/latex/: _asset_management_8md.tex  _asset_manager_8hpp.tex  _asset_manager_8hpp__incl.dot  _background_system_8hpp__dep__incl.dot  _background_tag_component_8hpp.tex  _base_network_manager_8hpp__dep__incl.dot  _boundary_system_8cpp__incl.dot  _boundary_system_8hpp.tex  _broadcast_8hpp.tex  _broadcast_8hpp__dep__incl.dot  _client_8cpp__incl.dot  _client_8hpp__incl.dot  _client_network_manager_8hpp.tex  _collider_component_8hpp__dep__incl.dot  _collision_system_8cpp__incl.dot  _collision_system_8hpp__dep__incl.dot  _component_8hpp__incl.dot  _e_c_s_manager_8hpp.tex  _e_c_s_manager_8hpp__dep__incl.dot  _embedded_assets_8cpp.tex  _embedded_assets_8hpp.tex  _enemy_8cpp__incl.dot  _enemy_system_8hpp__dep__incl.dot  _enemy_system_8hpp__incl.dot  _entity_manager_8cpp.tex  _game_8cpp.tex  _game_8cpp__incl.dot  _game_8hpp.tex  _getting_started_8md.tex  _help_8cpp__incl.dot  _macro_8hpp__dep__incl.dot  _macro_8hpp__incl.dot  _movement_system_8hpp.tex  _movement_system_8hpp__incl.dot  _networking_8md.tex  _packet_8hpp__incl.dot  _packet_8hpp_source.tex  _packet_builder_8hpp__dep__incl.dot  _packet_sender_8hpp.tex  _packet_sender_8hpp_source.tex  (+75 more)
game_engine/ECS/: ComponentManager.hpp  EntityManager.cpp
game_engine/ecs/: Component.hpp  ComponentManager.hpp  ECSManager.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.hpp
search/: search_index.json
server/: CMakeLists.txt  server.properties
server/src/: Broadcast.hpp  Client.cpp  Client.hpp  DatabaseManager.cpp  DatabaseManager.hpp  Help.cpp  Help.hpp  Macros.hpp  NetworkManager.cpp  NetworkManager.hpp  Parser.cpp  Parser.hpp  Server.cpp  Server.hpp  main.cpp
server/src/Errors/: ParamsError.hpp
server/src/Packets/: APacket.hpp  IPacket.hpp  PacketFactory.cpp  PacketFactory.hpp  PacketHandler.cpp  PacketHandler.hpp
server/src/enemy/: Enemy.cpp  Enemy.hpp
server/src/game/: Challenge.cpp  Challenge.hpp  Challlenge.cpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameRoom.hpp
server/src/packets/: PacketFactory.cpp  PacketFactory.hpp  PacketHandler.cpp  PacketHandler.hpp
server/src/player/: Player.cpp  Player.hpp
server/src/projectile/: Projectile.cpp  Projectile.hpp
server/src/queue/: Events.hpp  Queue.hpp
server/tests/: test_server.cpp
server_how_to/: index.html
site/: 404.html  index.html
site/server_how_to/: index.html
site/server_protocol/: index.html
temp_name/src/: Broadcast.hpp
wiki/ContributionGuidelines/: index.html
wiki/GameEngineECS/: index.html
wiki/GettingStarted/: index.html
wiki/Home/: index.html
wiki/ProjectStructure/: index.html
(+1041 files in other folders)
